bdr.BDR.scala.error
Compilation error:
BDR:42: error: Unmatched closing brace '}' ignored here
	}
        ^